--- a/layouts/index.html
+++ b/layouts/index.html
@@ -404,13 +404,13 @@
 
 <!-- Start Contact -->
 {{ with .GetPage "contact"}}
-<style>{{.Params.custom_css | safeCSS}}</style>
+<style>{{.Params.custom_css_contact | safeCSS}}</style>
 <section class="contact {{.Params.custom_class}}" {{.Params.custom_attributes | safeHTMLAttr}} style="background-image: url('{{.Params.bg_image | absURL}}');" id="contact">
   <div class="container">
     <div class="row">
       <div class="contact-holder col-lg-8 offset-lg-2 col-sm-8 offset-sm-2">
         <h1 class="wow fadeInUp" data-wow-duration="1.5s">{{ .Title | markdownify}}</h1>
-        <form method="POST" action="{{ .Params.form_action }}" data-toggle="validator">
+        <!-- <form method="POST" action="{{ .Params.form_action }}" data-toggle="validator">
           <div class="form-container row wow fadeInUp" data-wow-duration="1.5s">
             <div class="form-group col-lg-6">
               <input class="form-control" type="text" name="username" id="username" placeholder="{{.Params.name}}"
@@ -430,7 +430,9 @@
               <button class="submit form-control hvr-icon-push" type="submit" value="send"> {{.Params.submit}} </button>
             </div>
           </div>
-        </form>
+        </form> -->
+        <h1 class="wow fadeInUp" data-wow-duration="1.5s">{{ .Title | markdownify}}</h1>
+        <h2 style="color: white;">Test</p>
       </div>
     </div>
     <div class="row">
