--- a/layouts/index.html
+++ b/layouts/index.html
@@ -431,8 +431,7 @@
             </div>
           </div>
         </form> -->
-        <h1 class="wow fadeInUp" data-wow-duration="1.5s">{{ .Title | markdownify}}</h1>
-        <h2 style="color: white;">Test</p>
+        <!-- <h2 class="wow fadeInUp" data-wow-duration="1.5s" style="color: white;">Test</p> -->
       </div>
     </div>
     <div class="row">
