--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-8 mb-4 mb-lg-0">
         <div class="wow fadeInUp" data-wow-duration="1.5s">
-          {{ with .Params.thumbnail }}<img src="{{. | absURL}}" alt="image" class="img-fluid w-100 mb-5">{{ end }}
+          {{ with .Params.thumbnail }}<img src="{{. | absURL}}" alt="thumbnail" class="img-fluid w-100 mb-5">{{ end }}
           <div class="about-me-text mb-4">
             <h1>{{.Title | markdownify}}</h1>
           </div>
